# nixos-config

./: .gitignore  .gitmodules  Makefile  README.md  avahi.nix  base-configuration.nix  cl.cam.ac.uk.nix  configuration.nix  execute-markdown-commands.sh  extra-grub.nix  flake.nix  generate-secret.nix  generic-configuration.nix  hardware-configuration-orfina.nix  hardware-configuration-sd.nix  hardware-configuration-virtualbox.nix  home-manager-only.md  iso.nix  legacy.nix  make  make.sh  music.nix  programming.nix  pubkeys.nix  sd-configuration.nix  shell.nix  ssh.nix  st-0.8.4-solarized-swap.patch  virtualbox-configuration.nix
configurations/: acer-as.nix  base-configuration.nix  carallon-wsl.nix  carallon.nix  cc-pc.nix  cc-vm.nix  cc-wsl.nix  cc.nix  cl.cam.ac.uk.nix  hp.nix  pc-wsl.nix  pc.nix  promethium.nix  sd-configuration.nix  wsl.nix  yoga-book-virtualbox.nix  yoga-book.nix
home/: default.nix  direnv.nix  git-carallon.gitconfig  git-personal.gitconfig  git.nix  helix.nix  home-manager-only.nix  overlays.nix  shell.nix  solarized.nix  starship.nix  tmux.nix  zellij.nix  zsh.nix
modules/: avahi.nix  bluetooth.nix  clipboard.nix  default-user.nix  generate-secret.nix  git-appraise-rob.nix  graphical.nix  home-manager.nix  initrd-ssh.nix  linux-console.nix  music.nix  nethogs.nix  nix-ld-32.nix  programming.nix  shell.nix  solarized.nix  ssh.nix  starship.nix  vim.nix
overlays/: acme.nix  emacs.nix  gabotronics.nix  input-leap.nix  mimi.nix  mypkgs.nix  nom-rebuild.nix  nushell.nix  ripgrep.nix  sigrok.nix  (+2 more)
overlays/fortunes/src/: apf2cookie.py  pyproject.toml
(+84 files in other folders)
